--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.2.3"
+    "@babel/preset-env": "^7.2.3",
+    "readline-sync": "^1.4.9"
   }
 }
