--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
   ],
   "author": "Dunaev Artem",
   "license": "ISC",
+  "dependencies": {
+    "readline-sync": "^1.4.9"
+  },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
     "@babel/node": "^7.2.2",
-    "@babel/preset-env": "^7.2.3",
-    "readline-sync": "^1.4.9"
+    "@babel/preset-env": "^7.2.3"
   }
 }
