--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "braingames-dunaev",
-  "version": "1.10.0",
+  "version": "1.11.0",
   "description": "this console game make you smarter",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -14,7 +14,8 @@
   ],
   "bin": {
     "brain-games": "dist/bin/brain-games.js",
-    "brain-even": "dist/bin/brain-even.js"
+    "brain-even": "dist/bin/brain-even.js",
+    "brain-calc": "dist/bin/brain-calc.js"
   },
   "files": [
     "dist"
